--- a/Hyperion_geolocate.ipynb
+++ b/Hyperion_geolocate.ipynb
@@ -50,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:46:44.919487Z",
-     "start_time": "2021-08-03T21:46:44.915346Z"
+     "end_time": "2021-08-03T22:18:44.834100Z",
+     "start_time": "2021-08-03T22:18:44.830843Z"
     }
    },
    "outputs": [],
@@ -64,11 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:48:42.568274Z",
-     "start_time": "2021-08-03T21:48:42.564906Z"
+     "end_time": "2021-08-03T22:18:45.338213Z",
+     "start_time": "2021-08-03T22:18:45.334493Z"
     }
    },
    "outputs": [],
@@ -80,11 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:56:20.057378Z",
-     "start_time": "2021-08-03T21:56:20.045287Z"
+     "end_time": "2021-08-03T22:20:24.239531Z",
+     "start_time": "2021-08-03T22:20:24.225899Z"
     }
    },
    "outputs": [
@@ -94,7 +94,7 @@
        "_StoreTrueAction(option_strings=['-q', '--quiet'], dest='quiet', nargs=0, const=True, default=False, type=None, choices=None, help='if set, quiet the comments', metavar=None)"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,9 +105,15 @@
     "                    help='Input filename',\n",
     "                    default='EO1H0080122015195110K4.L1R')\n",
     "parser.add_argument('-r','--root_dir',nargs='?',\n",
-    "                    help='full file path of the root directory to save to',\n",
+    "                    help='full file path of the root directory to read from',\n",
     "                    default='/data/sam/SBG/data/')\n",
-    "parser.add_argument('-o','--only_geo',help='if set, will only save the geolocation information to new file',\n",
+    "parser.add_argument('-m','--hyperionmeta_dir',nargs='?',\n",
+    "                    help='full file path of the directory which has the hyperion metadata file',\n",
+    "                    default='/data/sam/SBG/data/')\n",
+    "parser.add_argument('-o','--out_dir',nargs='?',\n",
+    "                    help='full file path of the output directory',\n",
+    "                    default='/data/sam/SBG/data/')\n",
+    "parser.add_argument('-g','--only_geo',help='if set, will only save the geolocation information to new file',\n",
     "                    action='store_true')\n",
     "parser.add_argument('-q','--quiet',help='if set, quiet the comments',\n",
     "                    action='store_true')"
@@ -115,11 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:56:20.454041Z",
-     "start_time": "2021-08-03T21:56:20.450270Z"
+     "end_time": "2021-08-03T22:20:25.525704Z",
+     "start_time": "2021-08-03T22:20:25.521574Z"
     }
    },
    "outputs": [],
@@ -129,16 +135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:56:20.919387Z",
-     "start_time": "2021-08-03T21:56:20.914658Z"
+     "end_time": "2021-08-03T22:20:26.046540Z",
+     "start_time": "2021-08-03T22:20:26.040568Z"
     }
    },
    "outputs": [],
    "source": [
     "fp = in_.get('root_dir','/data/sam/SBG/data/')\n",
+    "fph = in_.get('hyperionmeta_dir','/data/sam/SBG/data/')\n",
+    "fp_out = in_.get('out_dir','/data/sam/SBG/data/')\n",
     "only_geo = in_.get('only_geo',False)\n",
     "fname = in_.get('file_name','EO1H0080122015195110K4.L1R')\n",
     "verbose = not in_.get('quiet',False)"
@@ -238,7 +246,7 @@
    "outputs": [],
    "source": [
     "g = pd.read_csv(fp+'Hyperion_attributes.csv')\n",
-    "if verbose: print('loaded metadata file: '+fp+'Hyperion_attributes.csv')"
+    "if verbose: print('loaded metadata file: '+fph+'Hyperion_attributes.csv')"
    ]
   },
   {
@@ -592,11 +600,11 @@
    "source": [
     "if only_geo:\n",
     "    du = da.drop(['Image','Spectral Center Wavelengths','Spectral Bandwidths','Gain Coefficients','Flag Mask'])\n",
-    "    new_path = fp+fname.split('.')[0]+'_'+fname.split('.')[1]+'_geo_only.nc'\n",
+    "    new_path = fp_out+fname.split('.')[0]+'_'+fname.split('.')[1]+'_geo_only.nc'\n",
     "    print('Saving to : '+new_path)\n",
     "    du.to_netcdf(new_path)\n",
     "else:\n",
-    "    new_path = fp+fname.split('.')[0]+'_'+fname.split('.')[1]+'_geo.nc'\n",
+    "    new_path = fp_out+fname.split('.')[0]+'_'+fname.split('.')[1]+'_geo.nc'\n",
     "    print('Saving to : '+new_path)\n",
     "    da.to_netcdf(new_path)"
    ]
