--- a/Hyperion_geolocate.ipynb
+++ b/Hyperion_geolocate.ipynb
@@ -5,35 +5,100 @@
    "metadata": {},
    "source": [
     "# Info\n",
-    "Purpose:\n",
-    "\n",
-    "    Read in L1 hyperion files. Geolocate with .csv file, output new file\n",
+    "Purpose:  \n",
+    "    - Read in L1 hyperion files. Geolocate with .csv file, output new file\n",
     "\n",
     "Input:\n",
+    " - -f: input file name\n",
+    " - -r: root directory\n",
+    " - -m: metadata file directory location\n",
+    " - -o: output file directory\n",
+    " - -g: for setting to only save geolocation information\n",
+    " - -q: quiet (non-verbose) setting\n",
     "\n",
-    "    arguments\n",
-    "\n",
-    "Output:\n",
-    "\n",
-    "    Figure and save files\n",
-    "\n",
-    "Keywords:\n",
-    "\n",
-    "    none\n",
+    "Output:  \n",
+    "    - Save file\n",
     "\n",
     "Dependencies:\n",
-    "\n",
-    "    - load_utils.py\n",
-    "    - matplotlib\n",
-    "    - numpy\n",
-    "    - write_utils\n",
-    "    - path_utils\n",
-    "    - hdf5storage\n",
-    "    - scipy\n",
+    " - numpy\n",
+    " - argparse\n",
+    " - pandas\n",
+    " - xarray\n",
+    " - pyproj\n",
+    " - datetime\n",
+    " - pyephem\n",
     "\n",
     "Needed Files:\n",
-    "  - file.rc : for consistent creation of look of matplotlib figures\n",
-    "  - ...\n",
+    "  - input file\n",
+    "  - Hyperion_attributes.csv\n",
+    "  \n",
+    "Example:\n",
+    "\n",
+    "    $ python Hyperion_geolocate.py -g -r /nobackupp10/hyperion/L1/ -o /nobackupp10/hyperion/L1_geo/ -m /nobackupp10/hyperion/\n",
+    " \n",
+    "    loaded file: /nobackupp10/hyperion/L1/EO1H0080122015195110K4.L1R\n",
+    "    loaded metadata file: /nobackupp10/hyperion/Hyperion_attributes.csv\n",
+    "    .. interpolating corners for lat & lon\n",
+    "    .. calculating view angles\n",
+    "    .. calculating sun angles\n",
+    "    Saving to : /nobackupp10/hyperion/L1_geo/EO1H0080122015195110K4_L1R_geo_only.nc  \n",
+    "\n",
+    "    $ ncdump -h /nobackupp10/hyperion/L1_geo/EO1H0080122015195110K4_L1R_geo_only.nc  \n",
+    " \n",
+    "    netcdf EO1H0080122015195110K4_L1R_geo_only {\n",
+    "    dimensions:\n",
+    "            Along\\ Track = 3407 ;\n",
+    "            Cross\\ Track = 256 ;\n",
+    "    variables:\n",
+    "            double Latitude(Along\\ Track, Cross\\ Track) ;\n",
+    "                    Latitude:_FillValue = NaN ;\n",
+    "                    Latitude:Geolocation_CreatedBy = \"Samuel LeBlanc\" ;\n",
+    "                    Latitude:Geolocation_CreationDate = \"2021-08-03 17:18:06.169785\" ;\n",
+    "                    Latitude:FieldInfo = \"see: https://lta.cr.usgs.gov/DD/EO1.html\" ;\n",
+    "                    Latitude:Geolocation_version = \"1.0\" ;\n",
+    "                    Latitude:Geolocation_method = \"Great circle interplation between corners from file: Hyperion_attributes.csv, cross-track first, then along track, using pyproj, WSG84\" ;\n",
+    "            double Longitude(Along\\ Track, Cross\\ Track) ;\n",
+    "                    Longitude:_FillValue = NaN ;\n",
+    "                    Longitude:Geolocation_CreatedBy = \"Samuel LeBlanc\" ;\n",
+    "                    Longitude:Geolocation_CreationDate = \"2021-08-03 17:18:06.169785\" ;\n",
+    "                    Longitude:FieldInfo = \"see: https://lta.cr.usgs.gov/DD/EO1.html\" ;\n",
+    "                    Longitude:Geolocation_version = \"1.0\" ;\n",
+    "                    Longitude:Geolocation_method = \"Great circle interplation between corners from file: Hyperion_attributes.csv, cross-track first, then along track, using pyproj, WSG84\" ;\n",
+    "            double time(Along\\ Track) ;\n",
+    "                    time:_FillValue = NaN ;\n",
+    "                    time:Geolocation_CreatedBy = \"Samuel LeBlanc\" ;\n",
+    "                    time:Geolocation_CreationDate = \"2021-08-03 17:18:06.188279\" ;\n",
+    "                    time:Geolocation_version = \"1.0\" ;\n",
+    "                    time:time_method = \"from Scene_start and Scene_stop from file Hyperion_attributes.csv\" ;\n",
+    "                    time:units = \"seconds since 2015-07-14 13:27:25.295000\" ;\n",
+    "                    time:calendar = \"proleptic_gregorian\" ;\n",
+    "            double ViewZenithAngle(Along\\ Track, Cross\\ Track) ;\n",
+    "                    ViewZenithAngle:_FillValue = NaN ;\n",
+    "                    ViewZenithAngle:Geolocation_CreatedBy = \"Samuel LeBlanc\" ;\n",
+    "                    ViewZenithAngle:Geolocation_CreationDate = \"2021-08-03 17:18:09.975463\" ;\n",
+    "                    ViewZenithAngle:Geolocation_version = \"1.0\" ;\n",
+    "                    ViewZenithAngle:ViewAngle_method = \"using pyproj to calculate differences in look angle from center of crosstrack to each pixel. View azimuth angle calculated from normal of along track\" ;\n",
+    "                    ViewZenithAngle:Additional_info = \"see https://www.usgs.gov/centers/eros/look-angles-and-coverage-area\" ;\n",
+    "            double ViewAzimuthAngle(Along\\ Track, Cross\\ Track) ;\n",
+    "                    ViewAzimuthAngle:_FillValue = NaN ;\n",
+    "                    ViewAzimuthAngle:Geolocation_CreatedBy = \"Samuel LeBlanc\" ;\n",
+    "                    ViewAzimuthAngle:Geolocation_CreationDate = \"2021-08-03 17:18:09.975463\" ;\n",
+    "                    ViewAzimuthAngle:Geolocation_version = \"1.0\" ;\n",
+    "                    ViewAzimuthAngle:ViewAngle_method = \"using pyproj to calculate differences in look angle from center of crosstrack to each pixel. View azimuth angle calculated from normal of along track\" ;\n",
+    "                    ViewAzimuthAngle:Additional_info = \"see https://www.usgs.gov/centers/eros/look-angles-and-coverage-area\" ;\n",
+    "            double SolarZenithAngle(Along\\ Track, Cross\\ Track) ;\n",
+    "                    SolarZenithAngle:_FillValue = NaN ;\n",
+    "                    SolarZenithAngle:Geolocation_CreatedBy = \"Samuel LeBlanc\" ;\n",
+    "                    SolarZenithAngle:Geolocation_CreationDate = \"2021-08-03 17:18:59.944900\" ;\n",
+    "                    SolarZenithAngle:Geolocation_version = \"1.0\" ;\n",
+    "                    SolarZenithAngle:SolarAngle_method = \"using pyephem to calculate solar zenith and azimuth angle from interpolated lat-lon and time positions\" ;\n",
+    "            double SolarAzimuthAngle(Along\\ Track, Cross\\ Track) ;\n",
+    "                    SolarAzimuthAngle:_FillValue = NaN ;\n",
+    "                    SolarAzimuthAngle:Geolocation_CreatedBy = \"Samuel LeBlanc\" ;\n",
+    "                    SolarAzimuthAngle:Geolocation_CreationDate = \"2021-08-03 17:18:59.944900\" ;\n",
+    "                    SolarAzimuthAngle:Geolocation_version = \"1.0\" ;\n",
+    "                    SolarAzimuthAngle:SolarAngle_method = \"using pyephem to calculate solar zenith and azimuth angle from interpolated lat-lon and time positions\" ;\n",
+    "\n",
     "\n",
     "Modification History:\n",
     "\n",
