Updated view azimuth angle calculations

--- a/Hyperion_geolocate.ipynb
+++ b/Hyperion_geolocate.ipynb
@@ -115,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T22:18:44.834100Z",
-     "start_time": "2021-08-03T22:18:44.830843Z"
+     "end_time": "2021-08-31T17:58:50.496613Z",
+     "start_time": "2021-08-31T17:58:50.492179Z"
     }
    },
    "outputs": [],
@@ -129,11 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T22:18:45.338213Z",
-     "start_time": "2021-08-03T22:18:45.334493Z"
+     "end_time": "2021-08-31T17:58:50.891862Z",
+     "start_time": "2021-08-31T17:58:50.888255Z"
     }
    },
    "outputs": [],
@@ -145,25 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T22:20:24.239531Z",
-     "start_time": "2021-08-03T22:20:24.225899Z"
+     "end_time": "2021-08-31T17:58:51.277417Z",
+     "start_time": "2021-08-31T17:58:51.258594Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "_StoreTrueAction(option_strings=['-q', '--quiet'], dest='quiet', nargs=0, const=True, default=False, type=None, choices=None, help='if set, quiet the comments', metavar=None)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "parser = argparse.ArgumentParser(description=long_description)\n",
     "parser.add_argument('-f','--file_name',nargs='?',\n",
@@ -186,11 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T22:20:25.525704Z",
-     "start_time": "2021-08-03T22:20:25.521574Z"
+     "end_time": "2021-08-31T17:58:51.884173Z",
+     "start_time": "2021-08-31T17:58:51.880591Z"
     }
    },
    "outputs": [],
@@ -200,11 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T22:20:26.046540Z",
-     "start_time": "2021-08-03T22:20:26.040568Z"
+     "end_time": "2021-08-31T17:58:53.462680Z",
+     "start_time": "2021-08-31T17:58:53.456924Z"
     }
    },
    "outputs": [],
@@ -226,11 +215,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T18:36:12.363097Z",
-     "start_time": "2021-08-03T18:36:12.084919Z"
+     "end_time": "2021-08-31T18:00:04.464402Z",
+     "start_time": "2021-08-31T18:00:03.793382Z"
     }
    },
    "outputs": [],
@@ -244,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:52:53.931361Z",
-     "start_time": "2021-08-03T21:52:53.927831Z"
+     "end_time": "2021-08-31T18:00:04.469721Z",
+     "start_time": "2021-08-31T18:00:04.466803Z"
     }
    },
    "outputs": [],
@@ -265,11 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:53:52.935212Z",
-     "start_time": "2021-08-03T21:53:52.927865Z"
+     "end_time": "2021-08-31T18:00:06.271932Z",
+     "start_time": "2021-08-31T18:00:06.242897Z"
     }
    },
    "outputs": [],
@@ -280,11 +269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T19:36:17.435668Z",
-     "start_time": "2021-08-03T19:36:17.431409Z"
+     "end_time": "2021-08-31T18:00:07.678063Z",
+     "start_time": "2021-08-31T18:00:07.673802Z"
     }
    },
    "outputs": [],
@@ -304,8 +293,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T17:58:54.432066Z",
-     "start_time": "2021-08-03T17:58:53.397665Z"
+     "end_time": "2021-08-31T18:00:12.961835Z",
+     "start_time": "2021-08-31T18:00:11.952445Z"
     }
    },
    "outputs": [],
@@ -316,11 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T18:07:45.390469Z",
-     "start_time": "2021-08-03T18:07:45.347696Z"
+     "end_time": "2021-08-31T18:00:14.257338Z",
+     "start_time": "2021-08-31T18:00:14.209439Z"
     }
    },
    "outputs": [],
@@ -337,11 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T19:34:43.803381Z",
-     "start_time": "2021-08-03T19:34:43.796998Z"
+     "end_time": "2021-08-31T18:00:17.408993Z",
+     "start_time": "2021-08-31T18:00:17.401567Z"
     }
    },
    "outputs": [],
@@ -353,11 +342,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T19:34:45.479033Z",
-     "start_time": "2021-08-03T19:34:44.284204Z"
+     "end_time": "2021-08-31T18:00:19.235568Z",
+     "start_time": "2021-08-31T18:00:17.865984Z"
     }
    },
    "outputs": [],
@@ -373,11 +362,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T19:53:06.244247Z",
-     "start_time": "2021-08-03T19:53:06.239447Z"
+     "end_time": "2021-08-31T18:00:19.241302Z",
+     "start_time": "2021-08-31T18:00:19.237917Z"
     }
    },
    "outputs": [],
@@ -391,11 +380,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T19:53:06.679357Z",
-     "start_time": "2021-08-03T19:53:06.670541Z"
+     "end_time": "2021-08-31T18:00:24.347368Z",
+     "start_time": "2021-08-31T18:00:24.337972Z"
     }
    },
    "outputs": [],
@@ -413,11 +402,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:13:58.363199Z",
-     "start_time": "2021-08-03T21:13:58.356017Z"
+     "end_time": "2021-08-31T18:00:25.760089Z",
+     "start_time": "2021-08-31T18:00:25.745447Z"
     }
    },
    "outputs": [],
@@ -430,11 +419,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:28:15.157741Z",
-     "start_time": "2021-08-03T21:28:15.153223Z"
+     "end_time": "2021-08-31T18:00:31.614258Z",
+     "start_time": "2021-08-31T18:00:31.609881Z"
     }
    },
    "outputs": [],
@@ -447,11 +436,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:28:15.584837Z",
-     "start_time": "2021-08-03T21:28:15.567842Z"
+     "end_time": "2021-08-31T18:00:32.490629Z",
+     "start_time": "2021-08-31T18:00:32.473584Z"
     }
    },
    "outputs": [],
@@ -468,11 +457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T20:36:41.860239Z",
-     "start_time": "2021-08-03T20:36:41.856508Z"
+     "end_time": "2021-08-31T18:00:34.444512Z",
+     "start_time": "2021-08-31T18:00:34.440926Z"
     }
    },
    "outputs": [],
@@ -483,11 +472,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T20:36:28.172311Z",
-     "start_time": "2021-08-03T20:36:25.169494Z"
+     "end_time": "2021-08-31T18:18:13.992253Z",
+     "start_time": "2021-08-31T18:18:10.947929Z"
     }
    },
    "outputs": [],
@@ -500,16 +489,16 @@
     "for iy in range(ny):\n",
     "    faa_tmp,baa_tmp,d_tmp = geoid.inv(lon[iy,ix*nx],lat[iy,ix*nx],lon[iy,:],lat[iy,:]) #forward az, back azi, dist in m    \n",
     "    vza[iy,:] = np.rad2deg(np.arctan(np.tan(np.deg2rad(float(i['Look_Angle'])))+d_tmp/distance_sat_to_earth))\n",
-    "    vaa[iy,:] = 90.0-faa_tmp"
+    "    vaa[iy,:] = faa_tmp % 360.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T20:38:32.527497Z",
-     "start_time": "2021-08-03T20:38:32.522693Z"
+     "end_time": "2021-08-31T18:00:45.999923Z",
+     "start_time": "2021-08-31T18:00:45.994620Z"
     }
    },
    "outputs": [],
@@ -523,11 +512,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T20:39:23.924065Z",
-     "start_time": "2021-08-03T20:39:23.915297Z"
+     "end_time": "2021-08-31T18:00:46.698655Z",
+     "start_time": "2021-08-31T18:00:46.689789Z"
     }
    },
    "outputs": [],
@@ -546,7 +535,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-31T18:18:37.227035Z",
+     "start_time": "2021-08-31T18:18:37.211982Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_sza_azi(lat,lon,datetimet,alt=None,return_sunearthfactor=False,return_sunf_and_dec=False):\n",
@@ -595,11 +589,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:34:20.103402Z",
-     "start_time": "2021-08-03T21:33:50.774689Z"
+     "end_time": "2021-08-31T18:19:07.282631Z",
+     "start_time": "2021-08-31T18:18:37.747646Z"
     }
    },
    "outputs": [],
@@ -615,11 +609,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:37:15.950484Z",
-     "start_time": "2021-08-03T21:37:15.945705Z"
+     "end_time": "2021-08-31T18:19:07.289600Z",
+     "start_time": "2021-08-31T18:19:07.285521Z"
     }
    },
    "outputs": [],
@@ -632,11 +626,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:37:24.765863Z",
-     "start_time": "2021-08-03T21:37:24.755147Z"
+     "end_time": "2021-08-31T18:19:07.305053Z",
+     "start_time": "2021-08-31T18:19:07.292013Z"
     }
    },
    "outputs": [],
@@ -654,11 +648,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-03T21:38:31.441094Z",
-     "start_time": "2021-08-03T21:38:31.019314Z"
+     "end_time": "2021-08-31T18:19:26.946143Z",
+     "start_time": "2021-08-31T18:19:09.779461Z"
     }
    },
    "outputs": [],
