typo in filepath for hyperion attributes.csv

--- a/Hyperion_geolocate.ipynb
+++ b/Hyperion_geolocate.ipynb
@@ -299,7 +299,7 @@
    },
    "outputs": [],
    "source": [
-    "g = pd.read_csv(fp+'Hyperion_attributes.csv')\n",
+    "g = pd.read_csv(fph+'Hyperion_attributes.csv')\n",
     "if verbose: print('loaded metadata file: '+fph+'Hyperion_attributes.csv')"
    ]
   },
